[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unifi_access"
version = "0.1.3"
authors = [
    { name = "Travis Tucker" }
]
description = "A Python client/wrapper for the UniFi Access API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["unifi", "access", "ubiquiti", "api", "client", "home-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Home Automation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.23.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/tuckert/unifi-access/issues"
"Documentation" = "https://github.com/tuckert/unifi-access"
"Source Code" = "https://github.com/tuckert/unifi-access"

[tool.setuptools.packages.find]
where = ["src"]
